[package]
name = "fail_on_ci"
description = "Script to abort compilation if one of the known CI-Servers is detected."
version = "0.1.3"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/hardliner66/fail_on_ci"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
